2010-06-05  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/simulationserver/simulationserver.cpp (SimulationServer::Step): 
	- disabling the usleep call to retain full compatibility with the previous
	  versions
	  
	* RELEASE:
	- release notes for the next version (0.2.1)
	 
	* CMakeLists.txt: 
	- bumped library versions and package version for the next release

2010-05-09  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/zeitgeist/scriptserver/scriptserver.cpp (thisCall): 
	- Fixed a bug in number to pointer conversion in 64bit systems

2010-03-28  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/monitorserver/monitorserver.h (MonitorServer): 
	* lib/oxygen/monitorserver/monitorserver.cpp (MonitorServer::GetMonitorData):
	- protect GetMonitorData() on simultaneous access
	 
	* lib/oxygen/physicsserver/int/sliderjointint.h: 
	* lib/oxygen/physicsserver/int/jointint.h: 
	* lib/oxygen/physicsserver/int/physicsobjectint.h:
	- fixed the shared_ptr.hpp include path
	 
	* plugin/odeimps/odejoint.cpp (JointImp::EnableFeedback):
	- removed extra cin/cout commands 

2010-02-28  Marian Buchta  <marian.buchta@gmail.com>

    * lib/kerosin/fontserver/fontserver.cpp:
    * lib/kerosin/imageserver/imageserver.cpp:
    * lib/kerosin/imageserver/imageserver.h:
    * lib/kerosin/inputserver/inputcontrol.cpp:
    * lib/kerosin/inputserver/inputserver.cpp:
    * lib/kerosin/materialserver/material2dtexture.cpp:
    * lib/kerosin/materialserver/materialserver.cpp:
    * lib/kerosin/renderserver/renderserver.cpp:
    * lib/kerosin/sceneserver/singlematnode.cpp:
    * lib/kerosin/sceneserver/staticmesh.cpp:
    * lib/kerosin/soundserver/soundserver.cpp:
    * lib/kerosin/soundserver/soundserver_c.cpp:
    * lib/kerosin/textureserver/textureserver.cpp:
    * lib/oxygen/agentaspect/agentaspect.cpp:
    * lib/oxygen/agentaspect/effector.cpp:
    * lib/oxygen/controlaspect/controlaspect.cpp:
    * lib/oxygen/gamecontrolserver/behavior.cpp: